--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,6 +1,12 @@
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #333;
-  color: #ddd;
+  color: #eee;
+}
+
+#wrapper {
+  width: 80%;
+  margin: 2.5em auto 2em auto;
 }
