--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,4 +1,5 @@
 /* Roboto weights 300;400;700;900 */
+/* blue: 0095DD */
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -30,4 +31,20 @@ canvas {
   text-transform: uppercase;
   font-weight: 700;
 
+}
+
+.button {
+  display: inline-block;
+  background-color: #000;
+  padding: 1em 1.2em;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: .8em;
+  color: #0095DD;
+  cursor: pointer;
+  border-radius: .5em;
+}
+
+.button:hover {
+  background-color: #123;
 }
