--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -10,14 +10,14 @@ body {
 }
 
 #wrapper {
-  width: 80%;
+  width: 800px;
   margin: 2.5em auto 2em auto;
 }
 
 #canvasOverlay {
-  margin: 0;
   padding: 0;
   position: relative;
+  opacity: 0.7
 }
 
 canvas {
@@ -30,10 +30,20 @@ canvas {
   top: 0;
   text-transform: uppercase;
   font-weight: 700;
+  font-size: .8em
+}
 
+.platformCounter {
+  margin: 10px 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-weight: 700;
+  font-size: .8em
 }
 
 .button {
+  opacity: 1;
   display: inline-block;
   background-color: #000;
   padding: 1em 1.2em;
