--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -14,6 +14,25 @@ h1  {
   margin: .2em;
 }
 
+input {
+  background-color: #222;
+  color: #eee;
+  padding: .3em;
+  border-color: #000;
+  border-style: solid;
+  margin-right: 1em;
+}
+
+input.button {
+  border: 0;
+}
+
+canvas {
+  background-color: #000;
+  border-radius: .5em;
+}
+
+
 #wrapper {
   width: 800px;
   margin: 2.5em auto 2em auto;
@@ -24,8 +43,9 @@ h1  {
   position: relative;
 }
 
-canvas {
-  background-color: #000;
+#levelCompletedContainer {
+  background-color: #222;
+  padding: 1em;
   border-radius: .5em;
 }
 
