Stylized sucess box

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -35,18 +35,32 @@ canvas {
 
 #wrapper {
   width: 800px;
-  margin: 2.5em auto 2em auto;
+  margin: 2.5em auto 0 auto;
 }
 
 #canvasWrapper {
+  background-color: #000;
+  height: 500px;
+  border-radius: .5em;
   padding: 0;
   position: relative;
 }
 
 #levelCompletedContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  height: 40%;
+  margin: auto;
   background-color: #222;
-  padding: 1em;
-  border-radius: .5em;
+  padding: 2em 1.5em;
+  border-radius: 0 0 .5em .5em;
+  border-radius:
+}
+
+#levelCompletedContainer * {
+  margin-top: 10px;
 }
 
 .timer {
