--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -59,6 +59,10 @@ canvas {
   border-radius:
 }
 
+#levelCompletedContainer p {
+  font-size: 1.15em;
+}
+
 #levelCompletedContainer * {
   margin-top: 10px;
 }
