style updates and levelCompleted.js renamed div id

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -46,24 +46,22 @@ canvas {
   position: relative;
 }
 
-#levelCompletedContainer {
+#infoBoxContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 60%;
-  height: 40%;
   margin: auto;
   background-color: #222;
   padding: 2em 1.5em;
   border-radius: 0 0 .5em .5em;
-  border-radius:
 }
 
-#levelCompletedContainer p {
+#infoBoxContainer p {
   font-size: 1.15em;
 }
 
-#levelCompletedContainer * {
+#infoBoxContainer * {
   margin-top: 10px;
 }
 
