--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -32,6 +32,21 @@ canvas {
   border-radius: .5em;
 }
 
+ul  {
+  padding: 1em;
+  border: 1px solid #999999;
+}
+
+li {
+  list-style-type: none;
+  font-size: .8em;
+  font-weight: 600;
+  padding: .3em;
+  text-transform: capitalize;
+  margin-top: 0;
+  /* border-radius: 3px; */
+}
+
 
 #wrapper {
   width: 800px;
