Updated TODO.md cleaning up code and moved height and width from css to js for single source of truth

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -49,13 +49,14 @@ li {
 
 
 #wrapper {
-  width: 800px;
+
+  /* width: 800px; */
   margin: 2.5em auto 0 auto;
 }
 
 #canvasWrapper {
   background-color: #000;
-  height: 500px;
+  /* height: 500px; */
   border-radius: .5em;
   padding: 0;
   position: relative;
