Added instructions screen

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -14,6 +14,11 @@ h1  {
   margin: .2em;
 }
 
+h2 {
+  color: #0095DD;
+  font-size: 2em;
+}
+
 input {
   background-color: #222;
   color: #eee;
@@ -45,19 +50,14 @@ li {
   text-transform: capitalize;
   margin-top: 0;
   display: flex;
-  /* border-radius: 3px; */
 }
 
-
 #wrapper {
-
-  /* width: 800px; */
   margin: 2.5em auto 0 auto;
 }
 
 #canvasWrapper {
   background-color: #000;
-  /* height: 500px; */
   border-radius: .5em;
   padding: 0;
   position: relative;
@@ -75,7 +75,8 @@ li {
 }
 
 #infoBoxContainer p {
-  font-size: 1.15em;
+  font-size: 1em;
+  line-height: 1.5em;
 }
 
 #infoBoxContainer * {
