--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -70,7 +70,7 @@ li {
   width: 60%;
   margin: auto;
   background-color: #222;
-  padding: 2em 1.5em;
+  padding: 2.5em;
   border-radius: 0 0 .5em .5em;
 }
 
