--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -68,7 +68,7 @@ li {
   flex-direction: column;
   align-items: center;
   width: 60%;
-  margin: auto;
+  margin: 1em auto;
   background-color: #222;
   padding: 2.5em;
   border-radius: 0 0 .5em .5em;
